# clear-cmake-project

./: CMakeLists.txt  README.md
